added jump animation and changed animation style

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Data
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -159,7 +159,7 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap
+OpenAssetsAtExit=/Game/2DSideScroller/Data/AnimationState.AnimationState
 
 [RootWindow]
 ScreenPosition=X=410.000 Y=292.000
@@ -1045,26 +1045,26 @@ DistCurveEditor.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem1=/Game/2DSideScroller/Textures/camelpyramid
-MRUItem2=/Game/2DSideScroller/Sprites/NewMaterial
-MRUItem3=/Game/StarterContent/Textures/T_Metal_Rust_D
-MRUItem4=/Game/2DSideScroller/Animations/P_Ambient_Dust
-MRUItem5=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem7=/Game/2DSideScroller/Textures/2DBackground
-MRUItem8=/Game/2DSideScroller/Textures/SandyBackround
-MRUItem9=/Game/StarterContent/Textures/T_Rock_Sandstone_D
-MRUItem10=/Game/StarterContent/Particles/Materials/M_Dust_Particle
-MRUItem11=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
-MRUItem12=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
-MRUItem13=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem14=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem15=/Game/2DSideScroller/Animations/PC_Run
-MRUItem16=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem17=/Game/2DSideScroller/Animations/PC_JumpUp
-MRUItem18=/Game/2DSideScroller/Animations/PC_JumpDown
-MRUItem19=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem0=/Game/2DSideScroller/Data/AnimationState
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem2=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem3=/Game/2DSideScroller/Textures/camelpyramid
+MRUItem4=/Game/2DSideScroller/Sprites/NewMaterial
+MRUItem5=/Game/StarterContent/Textures/T_Metal_Rust_D
+MRUItem6=/Game/2DSideScroller/Animations/P_Ambient_Dust
+MRUItem7=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem8=/Game/2DSideScroller/Textures/2DBackground
+MRUItem9=/Game/2DSideScroller/Textures/SandyBackround
+MRUItem10=/Game/StarterContent/Textures/T_Rock_Sandstone_D
+MRUItem11=/Game/StarterContent/Particles/Materials/M_Dust_Particle
+MRUItem12=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
+MRUItem13=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
+MRUItem14=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem15=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem16=/Game/2DSideScroller/Animations/PC_Run
+MRUItem17=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem18=/Game/2DSideScroller/Animations/PC_JumpUp
+MRUItem19=/Game/2DSideScroller/Animations/PC_JumpDown
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1672,6 +1672,33 @@ TargetPoint.ArrowComponent=True
 TargetPoint.Replication=True
 TargetPoint.Input=True
 TargetPoint.Actor=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=False
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -1701,10 +1728,10 @@ PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTi
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-2DSideScrollerCharacter_C="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-PaperCharacter="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+2DSideScrollerCharacter_C=
+PaperCharacter=
+Character=
+Pawn=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1865,4 +1892,8 @@ CapsuleComponent=
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
+
+[DetailCategoriesAdvanced]
+PropertyWrapper.Variable=False
+UserDefinedEnum.Enumerators=False
 
