--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=127.000 Y=53.000
@@ -1105,13 +1105,22 @@ Texture2D.Compositing=True
 PaperExtractSpritesSettings.Settings=True
 PaperExtractSpritesSettings.Naming=True
 PaperExtractSpriteGridSettings.Grid=True
+PaperFlipbook.Sprite=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/__Lastname_CharacterComplete__3_
+MRUItem0=/Game/2DSideScroller/Sprites/__Lastname_CharacterComplete__3__Sprite_21
+MRUItem1=/Game/2DSideScroller/Sprites/__Lastname_CharacterComplete__3__Sprite_11
+MRUItem2=/Game/2DSideScroller/animation/jumpup
+MRUItem3=/Game/2DSideScrollerBP/__Lastname_CharacterComplete__3_
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/__Lastname_CharacterComplete__3_.__Lastname_CharacterComplete__3_=1
+/Game/2DSideScroller/animation/jumpup.jumpup=1
 
