--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Data
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -157,9 +157,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScroller/Data/AnimationState.AnimationState
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=410.000 Y=292.000
@@ -1045,14 +1043,14 @@ DistCurveEditor.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Data/AnimationState
+MRUItem0=/Game/2DSideScroller/Textures/Level1_Tilemap
 MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem2=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem3=/Game/2DSideScroller/Textures/camelpyramid
-MRUItem4=/Game/2DSideScroller/Sprites/NewMaterial
-MRUItem5=/Game/StarterContent/Textures/T_Metal_Rust_D
-MRUItem6=/Game/2DSideScroller/Animations/P_Ambient_Dust
-MRUItem7=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem2=/Game/2DSideScroller/Data/AnimationState
+MRUItem3=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem4=/Game/2DSideScroller/Textures/camelpyramid
+MRUItem5=/Game/2DSideScroller/Sprites/NewMaterial
+MRUItem6=/Game/StarterContent/Textures/T_Metal_Rust_D
+MRUItem7=/Game/2DSideScroller/Animations/P_Ambient_Dust
 MRUItem8=/Game/2DSideScroller/Textures/2DBackground
 MRUItem9=/Game/2DSideScroller/Textures/SandyBackround
 MRUItem10=/Game/StarterContent/Textures/T_Rock_Sandstone_D
@@ -1699,6 +1697,7 @@ K2Node_Composite.GraphNodeDetail=True
 K2Node_Composite.Graph=True
 K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
+2DSideScrollerCharacter_C.Animations=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -1723,7 +1722,7 @@ InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[3]\" "
-Object=
+Object="\"Object.Sprite.TileLayers.TileLayers[0]\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1732,6 +1731,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperCharacter=
 Character=
 Pawn=
+PaperTileMap="\"Object.Sprite.TileLayers.TileLayers[0]\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
