--- a/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
@@ -5,5 +5,8 @@ Workspace=
 HostOverride=
 
 [SourceControl.SourceControlSettings]
-Provider=None
+Provider=Git
+
+[GitSourceControl.GitSourceControlSettings]
+BinaryPath=C:/Git/bin/git.exe
 
