Working on new level for final

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Data
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -155,6 +155,8 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/ResetFallingPlat.ResetFallingPlat
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Breakable_Block.Breakable_Block
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1034,26 +1036,26 @@ MovieSceneCapture.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Data/AnimationState
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/Breakable_Block
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem4=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem5=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem6=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins
-MRUItem7=/Game/2DSideScroller/Textures/StoneRuins_Shaking
-MRUItem8=/Game/2DSideScroller/Textures/StoneRuins_Animation
-MRUItem9=/Paper2D/MaskedUnlitSpriteMaterial
-MRUItem10=/Game/2DSideScroller/Textures/4_Briggs_StoneRuins_Sprite_3
-MRUItem11=/Game/2DSideScroller/Textures/Level1_TileSet_Ruins
-MRUItem12=/Game/2DSideScroller/Textures/4_Briggs_StoneRuins
-MRUItem13=/Game/2DSideScroller/Textures/Level1_StoneRuins
-MRUItem14=/Game/2DSideScroller/Sprites/4_Briggs_CharacterComplete_Sprite_2
-MRUItem15=/Game/2DSideScroller/Animations/PC_Run
-MRUItem16=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem17=/Game/2DSideScroller/Animations/PC_Jump_Down
-MRUItem18=/Game/2DSideScroller/Animations/PC_Jump_Up
-MRUItem19=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/Breakable_Block
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/ResetFallingPlat
+MRUItem2=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins2
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/Tutorial_2_TP1
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
+MRUItem5=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins
+MRUItem6=/Game/Data/AnimationState
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem9=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem10=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem11=/Game/2DSideScroller/Textures/StoneRuins_Shaking
+MRUItem12=/Game/2DSideScroller/Textures/StoneRuins_Animation
+MRUItem13=/Paper2D/MaskedUnlitSpriteMaterial
+MRUItem14=/Game/2DSideScroller/Textures/4_Briggs_StoneRuins_Sprite_3
+MRUItem15=/Game/2DSideScroller/Textures/Level1_TileSet_Ruins
+MRUItem16=/Game/2DSideScroller/Textures/4_Briggs_StoneRuins
+MRUItem17=/Game/2DSideScroller/Textures/Level1_StoneRuins
+MRUItem18=/Game/2DSideScroller/Sprites/4_Briggs_CharacterComplete_Sprite_2
+MRUItem19=/Game/2DSideScroller/Animations/PC_Run
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1586,6 +1588,36 @@ UserDefinedEnum.Enumerators=True
 UserDefinedEnum.Description=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
+2DSideScrollerCharacter_C.Animations=True
+K2Node_MakeStruct.PinOptions=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Navigation=True
+TextRenderComponent.Tags=True
+TextRenderComponent.Cooking=True
+Tutorial_1_TP_C.Tick=True
+Tutorial_1_TP_C.Replication=True
+Tutorial_1_TP_C.Rendering=True
+Tutorial_1_TP_C.Collision=True
+Tutorial_1_TP_C.Actor=True
+Tutorial_1_TP_C.Input=True
+Tutorial_1_TP_C.TransformCommon=True
+Tutorial_2_TP1_C.Tick=True
+Tutorial_2_TP1_C.Replication=True
+Tutorial_2_TP1_C.Rendering=True
+Tutorial_2_TP1_C.Collision=True
+Tutorial_2_TP1_C.Actor=True
+Tutorial_2_TP1_C.Input=True
+ResetFallingPlat_C.Tick=True
+ResetFallingPlat_C.Replication=True
+ResetFallingPlat_C.Rendering=True
+ResetFallingPlat_C.Collision=True
+ResetFallingPlat_C.Actor=True
+ResetFallingPlat_C.Input=True
+ResetFallingPlat_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -1608,6 +1640,9 @@ K2Node_InputKey.Modifier=True
 /Paper2D/MaskedUnlitSpriteMaterial.MaskedUnlitSpriteMaterial=1
 /Game/2DSideScroller/Textures/StoneRuins_Shaking.StoneRuins_Shaking=1
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode=1
+/Game/2DSideScroller/Textures/Level1_TileMap_Ruins2.Level1_TileMap_Ruins2=1
+/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP.Tutorial_1_TP=1
+/Game/2DSideScrollerBP/Blueprints/Tutorial_2_TP1.Tutorial_2_TP1=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1618,7 +1653,7 @@ CapsuleComponent=
 2DSideScrollerCharacter_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
-Breakable_Block_C=
+Breakable_Block_C=CameraComponent.PostProcess.Lens,
 PlayerStart=CameraComponent.PostProcess.Lens,
 Call Restart Player_6=CameraComponent.PostProcess.Lens,
 Call Restart Player=CameraComponent.PostProcess.Lens,
@@ -1626,6 +1661,9 @@ K2Node_VariableSet=CameraComponent.PostProcess.Lens,
 PropertyWrapper=CameraComponent.PostProcess.Lens,
 Animation State Machine_5=CameraComponent.PostProcess.Lens,
 Animation State Machine=CameraComponent.PostProcess.Lens,
+Tutorial_1_TP_C=
+ResetFallingPlat_C=
+SceneComponent=CameraComponent.PostProcess.Lens,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1668,18 +1706,24 @@ PreserveScaleRatio=True
 
 [DetailPropertyExpansion]
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
-SceneComponent=
-ActorComponent=
-Object=
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
+StaticMeshComponent=
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/ResetFallingPlat.ResetFallingPlat;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Breakable_Block.Breakable_Block;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP.Tutorial_1_TP;
+RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins2.Level1_TileMap_Ruins2;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins.Level1_TileMap_Ruins;
 
 [MessageLog]
@@ -1757,5 +1801,6 @@ CustomFavorites=(FieldName="/Script/Engine.Actor:GetTransform",NodeName="/Script
 CustomFavorites=(FieldName="/Script/Engine.Actor:K2_DestroyActor",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
 CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
 CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
+CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_IfThenElse")
 CurrentProfile=CustomProfile
 
