--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Animations
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Sprites
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -154,8 +154,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+CleanShutdown=True
+OpenAssetsAtExit=/Game/2DSideScroller/Sprites/Level1_TileMap.Level1_TileMap
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1458,19 +1458,44 @@ CharacterMovementComponent.ComponentReplication=True
 CharacterMovementComponent.Activation=True
 CharacterMovementComponent.Cooking=True
 CharacterMovementComponent.Events=True
+PaperTileSet.TileSet=False
+PaperTileSet.SingleTileEditor=True
+PaperTileMap.Tile Map=True
+PaperTileMap.SelectedLayer=True
+PaperTileMap.Setup=True
+PaperTileMap.Collision=True
+PaperTileMap.File Path=True
+PaperTileMapActor.TransformCommon=True
+PaperTileMapActor.Tile Map=True
+PaperTileMapActor.Materials=True
+PaperTileMapActor.Physics=True
+PaperTileMapActor.Collision=True
+PaperTileMapActor.Lighting=True
+PaperTileMapActor.Rendering=True
+PaperTileMapActor.Navigation=True
+PaperTileMapActor.VirtualTexture=True
+PaperTileMapActor.Tags=True
+PaperTileMapActor.Activation=True
+PaperTileMapActor.Cooking=True
+PaperTileMapActor.Replication=True
+PaperTileMapActor.Input=True
+PaperTileMapActor.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem2=/Game/2DSideScroller/Animations/Pc_Shoot
-MRUItem3=/Game/2DSideScroller/Animations/Pc_Run
-MRUItem4=/Game/2DSideScroller/Animations/Pc_Hurt
-MRUItem5=/Game/2DSideScroller/Animations/Pc_Projectile
-MRUItem6=/Game/2DSideScroller/Animations/Pc_JumpShoot
-MRUItem7=/Game/2DSideScroller/Animations/Pc_JumpUp
-MRUItem8=/Game/2DSideScroller/Animations/Pc_JumpDown
-MRUItem9=/Game/2DSideScroller/Animations/Pc_Idle
-MRUItem10=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
+MRUItem0=/Game/2DSideScroller/Sprites/Level1_TileMap
+MRUItem1=/Game/2DSideScroller/Sprites/4_Chong_TileSet_TileSet
+MRUItem2=/Game/2DSideScroller/Sprites/4_Chong_TileSet
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem4=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem5=/Game/2DSideScroller/Animations/Pc_Shoot
+MRUItem6=/Game/2DSideScroller/Animations/Pc_Run
+MRUItem7=/Game/2DSideScroller/Animations/Pc_Hurt
+MRUItem8=/Game/2DSideScroller/Animations/Pc_Projectile
+MRUItem9=/Game/2DSideScroller/Animations/Pc_JumpShoot
+MRUItem10=/Game/2DSideScroller/Animations/Pc_JumpUp
+MRUItem11=/Game/2DSideScroller/Animations/Pc_JumpDown
+MRUItem12=/Game/2DSideScroller/Animations/Pc_Idle
+MRUItem13=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/Pc_Hurt.Pc_Hurt=1
@@ -1484,6 +1509,7 @@ MRUItem10=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
 /Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.WorldInfo_0=1
+/Game/2DSideScroller/Sprites/4_Chong_TileSet_TileSet.4_Chong_TileSet_TileSet=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
@@ -1493,6 +1519,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WorldSettings="\"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
 Info="\"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[4]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1531,6 +1558,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScroller/Sprites/Level1_TileMap.Level1_TileMap;
 RecentlyPlaced=/Game/2DSideScroller/Animations/Pc_Idle.Pc_Idle;
 
 [PluginBrowser]
