--- a/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
@@ -7,3 +7,6 @@ HostOverride=
 [SourceControl.SourceControlSettings]
 Provider=Git
 
+[GitSourceControl.GitSourceControlSettings]
+BinaryPath=C:/Program Files/Git/bin/git.exe
+
