--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Animations/Data
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -157,7 +157,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1216,30 +1216,60 @@ CharacterMovementComponent.Sockets=True
 CharacterMovementComponent.ComponentTick=True
 CharacterMovementComponent.ComponentReplication=True
 CharacterMovementComponent.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+2DSideScrollerCharacter_C.Animations=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
 MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScroller/Textures/Level1_tilesetmap
-MRUItem2=/Game/2DSideScroller/Textures/Level1_tileset
-MRUItem3=/Game/2DSideScroller/Textures/Level1_tileMap
-MRUItem4=/Game/2DSideScroller/Textures/__LastName_TileSet2a__1__TileSet
-MRUItem5=/Game/2DSideScroller/Sprites/4_drones_tilemap
-MRUItem6=/Game/2DSideScroller/Sprites/4_drones_tileset_TileSet
-MRUItem7=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem8=/Game/2DSideScroller/Animations/PC_Run
-MRUItem9=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem10=/Game/2DSideScroller/Animations/PC_JumpShoot
-MRUItem11=/Game/2DSideScroller/Animations/PC_JumpDown
-MRUItem12=/Game/2DSideScroller/Animations/PC_Jump
-MRUItem13=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem14=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem15=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0
-MRUItem16=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_1
-MRUItem17=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_
-MRUItem18=/Game/2DSideScroller/Textures/4_drones_tileset
+MRUItem1=/Game/2DSideScroller/Animations/Data/Animationstate
+MRUItem2=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_
+MRUItem3=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem4=/Game/2DSideScroller/Textures/Level1_tilesetmap
+MRUItem5=/Game/2DSideScroller/Textures/Level1_tileset
+MRUItem6=/Game/2DSideScroller/Textures/Level1_tileMap
+MRUItem7=/Game/2DSideScroller/Textures/__LastName_TileSet2a__1__TileSet
+MRUItem8=/Game/2DSideScroller/Sprites/4_drones_tilemap
+MRUItem9=/Game/2DSideScroller/Sprites/4_drones_tileset_TileSet
+MRUItem10=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem11=/Game/2DSideScroller/Animations/PC_Run
+MRUItem12=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem13=/Game/2DSideScroller/Animations/PC_JumpShoot
+MRUItem14=/Game/2DSideScroller/Animations/PC_JumpDown
+MRUItem15=/Game/2DSideScroller/Animations/PC_Jump
+MRUItem16=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem17=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0
+MRUItem18=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_1
+MRUItem19=/Game/2DSideScroller/Textures/4_drones_tileset
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0.__Lastname_CharacterComplete__2__Sprite_0=1
@@ -1257,6 +1287,8 @@ MRUItem18=/Game/2DSideScroller/Textures/4_drones_tileset
 /Game/2DSideScroller/Textures/Level1_tileset.Level1_tileset=1
 /Game/2DSideScroller/Textures/Level1_tileMap.Level1_tileMap=1
 /Game/2DSideScroller/Textures/Level1_tilesetmap.Level1_tilesetmap=1
+/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_.__Lastname_CharacterComplete__2_=1
+/Game/2DSideScroller/Animations/Data/Animationstate.Animationstate=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
@@ -1277,7 +1309,7 @@ bFlattenFavoritesMenus=True
 bFavorPureCastNodes=False
 bAutoCastObjectConnections=False
 bShowViewportOnSimulate=False
-bShowInheritedVariables=False
+bShowInheritedVariables=True
 bAlwaysShowInterfacesInOverrides=True
 bShowParentClassInOverrides=True
 bShowEmptySections=True
@@ -1305,4 +1337,7 @@ PreserveScaleRatio=False
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_tilesetmap.Level1_tilesetmap;
 RecentlyPlaced=/Game/2DSideScroller/Sprites/4_drones_tilemap.4_drones_tilemap;
+
+[DetailCategoriesAdvanced]
+UserDefinedEnum.Enumerators=True
 
