--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,13 +149,14 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScroller/Sprites/Level1_TileMap.Level1_TileMap
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1480,22 +1481,36 @@ PaperTileMapActor.Cooking=True
 PaperTileMapActor.Replication=True
 PaperTileMapActor.Input=True
 PaperTileMapActor.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Rendering=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Sprites/Level1_TileMap
-MRUItem1=/Game/2DSideScroller/Sprites/4_Chong_TileSet_TileSet
-MRUItem2=/Game/2DSideScroller/Sprites/4_Chong_TileSet
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem4=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem5=/Game/2DSideScroller/Animations/Pc_Shoot
-MRUItem6=/Game/2DSideScroller/Animations/Pc_Run
-MRUItem7=/Game/2DSideScroller/Animations/Pc_Hurt
-MRUItem8=/Game/2DSideScroller/Animations/Pc_Projectile
-MRUItem9=/Game/2DSideScroller/Animations/Pc_JumpShoot
-MRUItem10=/Game/2DSideScroller/Animations/Pc_JumpUp
-MRUItem11=/Game/2DSideScroller/Animations/Pc_JumpDown
-MRUItem12=/Game/2DSideScroller/Animations/Pc_Idle
-MRUItem13=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
+MRUItem0=/Game/2DSideScroller/Animations/Pc_Hurt
+MRUItem1=/Game/2DSideScroller/Sprites/__Lastname_CharacterComplete_Sprite_7
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem3=/Game/2DSideScroller/Sprites/Level1_TileMap
+MRUItem4=/Game/2DSideScroller/Sprites/4_Chong_TileSet_TileSet
+MRUItem5=/Game/2DSideScroller/Sprites/4_Chong_TileSet
+MRUItem6=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem7=/Game/2DSideScroller/Animations/Pc_Shoot
+MRUItem8=/Game/2DSideScroller/Animations/Pc_Run
+MRUItem9=/Game/2DSideScroller/Animations/Pc_Projectile
+MRUItem10=/Game/2DSideScroller/Animations/Pc_JumpShoot
+MRUItem11=/Game/2DSideScroller/Animations/Pc_JumpUp
+MRUItem12=/Game/2DSideScroller/Animations/Pc_JumpDown
+MRUItem13=/Game/2DSideScroller/Animations/Pc_Idle
+MRUItem14=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/Pc_Hurt.Pc_Hurt=1
@@ -1510,10 +1525,12 @@ MRUItem13=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 /Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.WorldInfo_0=1
 /Game/2DSideScroller/Sprites/4_Chong_TileSet_TileSet.4_Chong_TileSet_TileSet=1
+/Game/2DSideScroller/Sprites/Level1_TileMap.Level1_TileMap=1
+/Game/2DSideScroller/Sprites/__Lastname_CharacterComplete_Sprite_7.__Lastname_CharacterComplete_Sprite_7=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object=
+Object="\"Object.Sprite.KeyFrames\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
