--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1494,21 +1494,25 @@ TextRenderActor.Input=True
 TextRenderActor.Actor=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Animations/Pc_Hurt
-MRUItem1=/Game/2DSideScroller/Sprites/__Lastname_CharacterComplete_Sprite_7
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem3=/Game/2DSideScroller/Sprites/Level1_TileMap
-MRUItem4=/Game/2DSideScroller/Sprites/4_Chong_TileSet_TileSet
-MRUItem5=/Game/2DSideScroller/Sprites/4_Chong_TileSet
-MRUItem6=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem7=/Game/2DSideScroller/Animations/Pc_Shoot
-MRUItem8=/Game/2DSideScroller/Animations/Pc_Run
-MRUItem9=/Game/2DSideScroller/Animations/Pc_Projectile
-MRUItem10=/Game/2DSideScroller/Animations/Pc_JumpShoot
-MRUItem11=/Game/2DSideScroller/Animations/Pc_JumpUp
-MRUItem12=/Game/2DSideScroller/Animations/Pc_JumpDown
+MRUItem0=/Game/2DSideScroller/Animations/Pc_JumpDown
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem2=/Game/2DSideScroller/Animations/Pc_Hurt
+MRUItem3=/Game/2DSideScroller/Sprites/__Lastname_CharacterComplete_Sprite_7
+MRUItem4=/Game/2DSideScroller/Sprites/Level1_TileMap
+MRUItem5=/Game/2DSideScroller/Sprites/4_Chong_TileSet_TileSet
+MRUItem6=/Game/2DSideScroller/Sprites/4_Chong_TileSet
+MRUItem7=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem8=/Game/2DSideScroller/Animations/Pc_Shoot
+MRUItem9=/Game/2DSideScroller/Animations/Pc_Run
+MRUItem10=/Game/2DSideScroller/Animations/Pc_Projectile
+MRUItem11=/Game/2DSideScroller/Animations/Pc_JumpShoot
+MRUItem12=/Game/2DSideScroller/Animations/Pc_JumpUp
 MRUItem13=/Game/2DSideScroller/Animations/Pc_Idle
 MRUItem14=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 
@@ -1530,7 +1534,7 @@ MRUItem14=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object="\"Object.Sprite.KeyFrames\" "
+Object=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1552,7 +1556,7 @@ bFlattenFavoritesMenus=True
 bFavorPureCastNodes=False
 bAutoCastObjectConnections=False
 bShowViewportOnSimulate=False
-bShowInheritedVariables=False
+bShowInheritedVariables=True
 bAlwaysShowInterfacesInOverrides=True
 bShowParentClassInOverrides=True
 bShowEmptySections=True
