--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -22,6 +22,7 @@ PreviewPlatformName=None
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 PreviewDeviceProfileName=None
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -155,8 +156,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/Level1_TileMap.Level1_TileMap
+CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
 ScreenPosition=X=18.000 Y=157.000
@@ -1256,29 +1257,56 @@ TextRenderComponent.Lighting=True
 TextRenderComponent.Navigation=True
 TextRenderComponent.Tags=True
 TextRenderComponent.Cooking=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Textures/Level1_TileMap
-MRUItem1=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
-MRUItem2=/Game/2DSideScroller/Textures/Level1_TileSet
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem4=/Game/2DSideScroller/animationn/PC_Shoot
-MRUItem5=/Game/2DSideScroller/animationn/PC_Run
-MRUItem6=/Game/2DSideScroller/animationn/PC_Projectile
-MRUItem7=/Game/2DSideScroller/animationn/PC_JumpShoot
-MRUItem8=/Game/2DSideScroller/animationn/PC_JumpUp
-MRUItem9=/Game/2DSideScroller/animationn/PC_JumpDown
-MRUItem10=/Game/2DSideScroller/animationn/PC_idle
-MRUItem11=/Game/2DSideScroller/animationn/PC_Hurt
-MRUItem12=/Game/2DSideScroller/Sprites/PC_Run
-MRUItem13=/Game/2DSideScroller/Sprites/4_Zouvias_TileSet
-MRUItem14=/Game/2DSideScroller/Sprites/PC_Hurt
-MRUItem15=/Game/2DSideScroller/Sprites/Hurt
-MRUItem16=/Game/2DSideScroller/Sprites/4_Zouvias_CharacterCompletePNG
-MRUItem17=/Game/2DSideScroller/Textures/4_Zouvias_CharacterCompletePNG
+MRUItem0=/Game/2DSideScroller/Data/AnimationState
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem2=/Game/2DSideScroller/Textures/Level1_TileMap
+MRUItem3=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
+MRUItem4=/Game/2DSideScroller/Textures/Level1_TileSet
+MRUItem5=/Game/2DSideScroller/animationn/PC_Shoot
+MRUItem6=/Game/2DSideScroller/animationn/PC_Run
+MRUItem7=/Game/2DSideScroller/animationn/PC_Projectile
+MRUItem8=/Game/2DSideScroller/animationn/PC_JumpShoot
+MRUItem9=/Game/2DSideScroller/animationn/PC_JumpUp
+MRUItem10=/Game/2DSideScroller/animationn/PC_JumpDown
+MRUItem11=/Game/2DSideScroller/animationn/PC_idle
+MRUItem12=/Game/2DSideScroller/animationn/PC_Hurt
+MRUItem13=/Game/2DSideScroller/Sprites/PC_Run
+MRUItem14=/Game/2DSideScroller/Sprites/4_Zouvias_TileSet
+MRUItem15=/Game/2DSideScroller/Sprites/PC_Hurt
+MRUItem16=/Game/2DSideScroller/Sprites/Hurt
+MRUItem17=/Game/2DSideScroller/Sprites/4_Zouvias_CharacterCompletePNG
+MRUItem18=/Game/2DSideScroller/Textures/4_Zouvias_CharacterCompletePNG
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/animationn/PC_Hurt.PC_Hurt=1
@@ -1294,6 +1322,7 @@ MRUItem17=/Game/2DSideScroller/Textures/4_Zouvias_CharacterCompletePNG
 /Game/2DSideScroller/Textures/Level1_TileSet.Level1_TileSet=1
 /Game/2DSideScroller/Textures/Level1_TileMap.Level1_TileMap=1
 /Game/2DSideScroller/Textures/4_Zouvias_TileSet.4_Zouvias_TileSet=1
+/Game/2DSideScroller/Data/AnimationState.AnimationState=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
@@ -1314,7 +1343,7 @@ bFlattenFavoritesMenus=True
 bFavorPureCastNodes=False
 bAutoCastObjectConnections=False
 bShowViewportOnSimulate=False
-bShowInheritedVariables=False
+bShowInheritedVariables=True
 bAlwaysShowInterfacesInOverrides=True
 bShowParentClassInOverrides=True
 bShowEmptySections=True
@@ -1342,4 +1371,7 @@ InstalledPlugins=XRVisualization
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_TileMap.Level1_TileMap;
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
