I fixed character movement, fixed tilemap, added in jump, run, and idle animations.

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,9 +145,11 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/Data
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -1192,23 +1194,48 @@ PaperTileMapActor.Cooking=True
 PaperTileMapActor.Replication=True
 PaperTileMapActor.Input=True
 PaperTileMapActor.Actor=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+2DSideScrollerCharacter_C.Animations=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Sprites/Level1TileMap
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem2=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
-MRUItem3=/Game/2DSideScrollerBP/Sprites/Tileset
-MRUItem4=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
-MRUItem5=/Game/2DSideScrollerBP/Animations/PC_Shoot
-MRUItem6=/Game/2DSideScrollerBP/Animations/PC_Run
-MRUItem7=/Game/2DSideScrollerBP/Animations/PC_Projectile
-MRUItem8=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
-MRUItem9=/Game/2DSideScrollerBP/Animations/PC_Jump
-MRUItem10=/Game/2DSideScrollerBP/Animations/PC_Idle
-MRUItem11=/Game/2DSideScrollerBP/Animations/PC_Hurt
-MRUItem12=/Game/2DSideScroller/Sprites/RunningAnimation
-MRUItem13=/Game/2DSideScrollerBP/4_Rodriguez_CharacterComplete
-MRUItem14=/Game/2DSideScrollerBP/_4_Rodriguez_Tileset__1_
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/Data/AnimationState
+MRUItem2=/Game/2DSideScrollerBP/Sprites/Level1TileMap
+MRUItem3=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
+MRUItem4=/Game/2DSideScrollerBP/Sprites/Tileset
+MRUItem5=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
+MRUItem6=/Game/2DSideScrollerBP/Animations/PC_Shoot
+MRUItem7=/Game/2DSideScrollerBP/Animations/PC_Run
+MRUItem8=/Game/2DSideScrollerBP/Animations/PC_Projectile
+MRUItem9=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
+MRUItem10=/Game/2DSideScrollerBP/Animations/PC_Jump
+MRUItem11=/Game/2DSideScrollerBP/Animations/PC_Idle
+MRUItem12=/Game/2DSideScrollerBP/Animations/PC_Hurt
+MRUItem13=/Game/2DSideScroller/Sprites/RunningAnimation
+MRUItem14=/Game/2DSideScrollerBP/4_Rodriguez_CharacterComplete
+MRUItem15=/Game/2DSideScrollerBP/_4_Rodriguez_Tileset__1_
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1223,6 +1250,7 @@ MRUItem14=/Game/2DSideScrollerBP/_4_Rodriguez_Tileset__1_
 /Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_._4_Rodriguez_Tileset__1_=1
 /Game/2DSideScrollerBP/Sprites/Tileset.Tileset=1
 /Game/2DSideScrollerBP/Sprites/Level1TileMap.Level1TileMap=1
+/Game/Data/AnimationState.AnimationState=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1238,7 +1266,7 @@ bFlattenFavoritesMenus=True
 bFavorPureCastNodes=False
 bAutoCastObjectConnections=False
 bShowViewportOnSimulate=False
-bShowInheritedVariables=False
+bShowInheritedVariables=True
 bAlwaysShowInterfacesInOverrides=True
 bShowParentClassInOverrides=True
 bShowEmptySections=True
@@ -1281,4 +1309,10 @@ InstalledPlugins=XRVisualization
 
 [MessageLog]
 LastLogListing=EditorErrors
+
+[DetailCustomWidgetExpansion]
+K2Node_FunctionEntry=
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
